--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,18 @@
     <title>12_Tag_Lev2_1_css-einführung_position</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    
+    <section>
+    <p class="ueberschrift">Look Into The Distance</p>
+    <p class="text">A video blog or video log, usually shortened to vlog,
+        is a form of blog for which the medium is video,
+        and is a form of web television.
+    </p>
+    <p class="button">Get Ready</p>
+</section>
+    <img src="./assets/ img/Bild_FrauMitFernglas.webp" alt="Frau mit Fernglas">
+
 </body>
+
 </html>
