--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <section>
-    <p class="ueberschrift">Look Into The Distance</p>
-    <p class="text">A video blog or video log, usually shortened to vlog,
-        is a form of blog for which the medium is video,
-        and is a form of web television.
-    </p>
-    <p class="button">Get Ready</p>
-</section>
+        <p class="ueberschrift"><span>Look </span> <span>Into </span> <span>The </span> <span>Distance</span> </p>
+        <p class="text">A video blog or video log, usually shortened to vlog,
+            is a form of blog for which the medium is video,
+            and is a form of web television.
+        </p>
+        <a class="button" href="'">Get Ready</a>
+    </section>
     <img src="./assets/ img/Bild_FrauMitFernglas.webp" alt="Frau mit Fernglas">
 
 </body>
